sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:5: error: not found: value estBaseTrie
      while(!estBaseTrie(trouB)){
             ^